fix broken css

--- a/projects/nwp/assets/css/main.css
+++ b/projects/nwp/assets/css/main.css
@@ -85,15 +85,7 @@
 }
 
 	
-  /* Full height */
-  height: 100%;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-	
-}
 
 
 
